--- a/.github/workflows/keyvault-setup.yaml
+++ b/.github/workflows/keyvault-setup.yaml
@@ -8,6 +8,8 @@ jobs:
   CreateKeyvaults:
     runs-on: ubuntu-20.04
     steps:
+      - name: 'Checkout code'
+        uses: actions/checkout@v2
       - name: 'AZ CLI Loging'
         uses: azure/login@v1
         with:
@@ -15,8 +17,7 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           enable-AzPSSession: true 
-      - name: 'Checkout code'
-        uses: actions/checkout@v2
-      - name: 'Run PowerShell script'
+      - name: 'Run Powershell Scripts' 
         run: |
-          powershell -c .\powershell-kv\createvaults.ps1
+          .\powershell-kv\createvaults.ps1
+
