--- a/.github/workflows/keyvault-setup.yaml
+++ b/.github/workflows/keyvault-setup.yaml
@@ -18,7 +18,10 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           enable-AzPSSession: true 
       - name: 'Run Powershell Scripts'
-        working-directory: .\powershell-kv\
-        run: |
-          .\createvaults.ps1
+        uses: azure/powershell@v1
+        with:
+          inlineScript: |
+            cd .\powershell-kv\
+            .\createvaults.ps1
+          azPSVersion: "latest"
 
